--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -119,35 +119,35 @@ before_alert_ment = 입니다
 alert_ment = 탐 입니다. 월보 오세요
 
 bossname = 셀리호든
-bosstime = 22:00
+bosstime = 21:30
 genPeriod = 168:00
 startDate = 2023-03-15
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 셀리호든의 봉인으로 오세요
 
 bossname = 람달
-bosstime = 13:00
+bosstime = 19:00
 genPeriod = 24:00
 startDate = 2023-03-14
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 오만 1층으로 오세요
 
 bossname = 마르딜
-bosstime = 19:00
+bosstime = 20:00
 genPeriod = 24:00
 startDate = 2023-03-14
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 오만 2층으로 오세요
 
 bossname = 케르논
-bosstime = 20:00
+bosstime = 19:00
 genPeriod = 24:00
 startDate = 2023-03-14
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 오만 3층으로 오세요
 
 bossname = 타림
-bosstime = 13:00
+bosstime = 20:00
 genPeriod = 24:00
 startDate = 2023-03-14
 before_alert_ment = 입니다
@@ -168,26 +168,32 @@ before_alert_ment = 입니다
 alert_ment = 탐 입니다. 오만 6층으로 오세요
 
 bossname = 슈리엘
-bosstime = 13:00
+bosstime = 19:00
 genPeriod = 24:00
 startDate = 2023-03-14
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 오만 7층으로 오세요
 
 bossname = 갈락시아
-bosstime = 19:00
+bosstime = 20:00
 genPeriod = 24:00
 startDate = 2023-03-14
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 오만 8층으로 오세요
 
 bossname = 베리타스
-bosstime = 20:00
+bosstime = 19:00
 genPeriod = 24:00
 startDate = 2023-03-14
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 오만 9층으로 오세요
 
+bossname = 릴리스
+bosstime = 20:00
+genPeriod = 24:00
+startDate = 2023-03-14
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 오만 10층으로 오세요
 
 
 
