--- a/boss.ini
+++ b/boss.ini
@@ -1,4 +1,4 @@
-﻿﻿-----일반보스-----
+-----일반보스-----
 bossname = 가레스
 gentime = 09:00
 nogencheck = 1
@@ -353,7 +353,7 @@ bossname = 나이
 gentime = 15:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 탐 입니다. 고요함의  오세요
+alert_ment = 탐 입니다. 고요함의 갈대밭으로 오세요
 mungtime = 1
 
 bossname = 모데
@@ -361,4 +361,11 @@ gentime = 24:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 광기의 섬으로 오세요
+mungtime = 1
+
+bossname = 발락
+gentime = 20:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 침식의 숲으로 오세요
 mungtime = 1
